Fix: remove the z-index 1 for grommet formfield errors

--- a/scss/grommet-core/_objects.form-field.scss
+++ b/scss/grommet-core/_objects.form-field.scss
@@ -370,7 +370,6 @@ $colored-select-drop-caret: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB
 }
 
 .#{$grommet-namespace}form-field--error {
-  z-index: 1;
   border-color: map-get($brand-status-colors, critical);
 }
 
